--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>land marks of some intersting place all over the world</h1>
+        <h1>some random photos of football teams</h1>
         <div class="container">
-            <span style="--i:1"><a href="https://www.google.com"><img src="./photos/FB_IMG_1524070948538.jpg" style="width: 100%; height: 100%;" alt=""></a></span>
+            <span style="--i:1"><img src="./photos/FB_IMG_1524070948538.jpg" style="width: 100%; height: 100%;" alt=""></span>
             <span style="--i:2"><img src="./photos/FB_IMG_1524070952215.jpg" alt=""></span>
             <span style="--i:3"><img src="./photos/FB_IMG_1524070955481.jpg" alt=""></span>
-            <span style="--i:4"><img src="./photos/FB_IMG_1536355000258.jpg" alt=""></span>
+            <span style="--i:4"><img src="./photos/FB_IMG_1524070969871.jpg" alt=""></span>
             <span style="--i:5"><img src="./photos/FB_IMG_1524070973328.jpg" alt=""></span>
             <span style="--i:6"><img src="./photos/FB_IMG_1524070977946.jpg" alt=""></span>
-            <span style="--i:7"><img src="./photos/FB_IMG_1535476835361.jpg" alt=""></span>
+            <span style="--i:7"><img src="./photos/FB_IMG_1524070964711.jpg" alt=""></span>
             <span style="--i:8"><img src="./photos/FB_IMG_1524070980026.jpg" alt=""></span>
         </div>
     </body>
